# fts-sys

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: fts-sys.h  lib.rs  tests.rs
